--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research and Projects</heading>
               <p>
-                I'm interested in computer vision, machine learning, optimization, and image processing. Much of my research is about inferring the physical world (shape, motion, color, light, etc) from images. 
+                I'm interested in the intersection of statistics, machine learning, and optimization. Currently I am also exploring web development, computer vision and image processing. <!--Much of my research is about inferring the physical world (shape, motion, color, light, etc) from images.--> 
               </p>
             </td>
           </tr>
@@ -72,19 +72,19 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/prl.jpg" alt="prl" width="160" height="160">
+              <img src="images/classificationAccuracyPegasos.png" alt="prl" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/13rVuJpcytRdLYCnKpq46g7B7IzSrPQ2P/view?usp=sharing">
-                <papertitle>Parallelizing Reinforcement Learning</papertitle>
+              <a href="https://github.com/jerryavance/Project1_AutomaticReviewAnalyzer">
+                <papertitle>Automatic Review Analyzer</papertitle>
               </a>
               <br>
-              <strong>Jonathan T. Barron</strong>, <a href="http://www.eecs.berkeley.edu/~dsg/">Dave Golland</a>, <a href="http://www.cs.berkeley.edu/~nickjhay/">Nicholas J. Hay</a>
+              <strong>Jerry Vance Anguzu</strong>
               <br>
-              <em>Technical Report</em>, 2009
+              <em>Technical Review</em>, 2021
               <br>
-              <a href="data/BarronPRL2009.bib">bibtex</a>
-              <p>Markov Decision Problems which lie in a low-dimensional latent space can be decomposed, allowing modified RL algorithms to run orders of magnitude faster in parallel.</p>
+              <a href="https://github.com/jerryavance/Project1_AutomaticReviewAnalyzer">Code</a>
+              <p>Design of a classifier to use for sentiment analysis of product reviews. The training set consists of reviews written by Amazon customers for various food products. In this project I implemented and compared three types of linear classifiers: the perceptron algorithm, the average perceptron algorithm, and the Pegasos algorithm. I then used the classifiers on the food review dataset, using some simple text features and the bag of words approach. Additionally I experimented with additional features and explored their impact on classifier performance.</p>
             </td>
           </tr>
 
@@ -237,7 +237,7 @@
 
                 <tr>
                   <td style="padding:20px;width:25%;vertical-align:middle">
-                    <img src="images/FundamentalsOfStat.jpg" alt="prl" width="160" height="160">
+                    <img src="images/introCSProgramming.jpg" alt="prl" width="160" height="160">
                   </td>
                   <td width="75%" valign="middle">
                     <a href="https://courses.edx.org/certificates/8be99ae9bbf444a38e04845a8ffadffc">
@@ -270,6 +270,29 @@
               <a href="https://coursera.org/share/18b9490e510890c103ca21f7b75e3e11">Smart Analytics, Machine Learning, and AI on GCP, May 2020</a>
               <br><br>
               <a href="https://coursera.org/share/c762f1a2179d48b5d4dee94c881659db">Divide and Conquer, Sorting and Searching, and Randomized Algorithms, April 2020</a>
+              <br><br>
+              <a href="https://courses.edx.org/certificates/0a6d549010cc41a7bb686d9945c28c23">6.00.2x: Introduction to Computational Thinking and Data Science, June 2020</a>
+              <br><br>
+              <a href="https://courses.edx.org/certificates/2de86ce3f5914162b6a4cd0b133ebe75">6.00.1x: Introduction to Computer Science and Programming Using Python, March 2020</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Other Resources</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+          <tr>
+            <td width="75%" valign="center">
+              <a href="data/JerryVance_remote_ready_certificate.pdf">Remote Ready, an online course by Oyster® to prepare professionals for a career at a globally distributed company, 2021</a>
+              <br><br>
+              <a href="https://eaudc2019.herokuapp.com/eaudc2019/tab/speaker/">Best Speaker/ Best Debater at East African Universities Debate championship, 2019</a>
             </td>
           </tr>
         </tbody></table>
