--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <em>Technical Review</em>, 2021
               <br>
               <a href="https://github.com/jerryavance/Project1_AutomaticReviewAnalyzer">Code</a>
-              <p>Design of a classifier to use for sentiment analysis of product reviews. The training set consists of reviews written by Amazon customers for various food products. In this project I implemented and compared three types of linear classifiers: the perceptron algorithm, the average perceptron algorithm, and the Pegasos algorithm. I then used the classifiers on the food review dataset, using some simple text features and the bag of words approach. Additionally I experimented with additional features and explored their impact on classifier performance.</p>
+              <p>Design of a classifier to use for sentiment analysis of product reviews. The training set consists of reviews written by Amazon customers for various food products. In this project I implemented and compared three types of linear classifiers: the perceptron algorithm, the average perceptron algorithm, and the Pegasos algorithm. I then used the classifiers on the food review dataset, using some simple text features and the bag of words approach. I then experimented with additional features and explored their impact on classifier performance.</p>
             </td>
           </tr>
 
